--- a/mobile-index/main.css
+++ b/mobile-index/main.css
@@ -67,13 +67,6 @@ a:hover, a:focus {
 
 
 /* Estilos para la barra de navegación */
-.barra-superior {
-    background-color: #2ecc71; /* Verde claro */
-    text-align: center;
-    padding: 10px 0; /* Añadir espacio alrededor de los enlaces */
-}
-
-/* Estilos para los enlaces */
 .barra-superior a {
     color: #fff; /* Texto blanco */
     font-family: 'Montserrat', sans-serif; /* Fuente elegida */
@@ -84,6 +77,7 @@ a:hover, a:focus {
     border-radius: 20px; /* Bordes redondeados */
     background-color: #27ae60; /* Verde oscuro */
     transition: background-color 0.3s; /* Efecto de transición al pasar el mouse */
+    display: block; /* Hacer que los enlaces se muestren como bloques */
 }
 
 /* Estilos al pasar el mouse sobre los enlaces */
@@ -99,8 +93,10 @@ a:hover, a:focus {
 
     .barra-superior a {
         padding: 10px 12px; /* Reducir el espacio interno del botón */
+        display: inline-block; /* Hacer que los enlaces se muestren en línea en pantallas grandes */
     }
 }
+
 
 .container {
     width: 300px;
