--- a/mobile-index/main.css
+++ b/mobile-index/main.css
@@ -67,33 +67,41 @@ a:hover, a:focus {
 
 
 /* Estilos para la barra de navegación */
-.barra-superior a {
-    color: #fff; /* Texto blanco */
-    font-family: 'Montserrat', sans-serif; /* Fuente elegida */
-    font-size: 18px; /* Tamaño de fuente */
-    text-decoration: none; /* Sin subrayado */
-    margin: 0 10px; /* Espacio entre los enlaces */
-    padding: 10px 20px; /* Espacio interno del botón */
-    border-radius: 20px; /* Bordes redondeados */
+.barra-superior {
+    overflow: hidden;
     background-color: #27ae60; /* Verde oscuro */
-    transition: background-color 0.3s; /* Efecto de transición al pasar el mouse */
-    display: block; /* Hacer que los enlaces se muestren como bloques */
 }
 
-/* Estilos al pasar el mouse sobre los enlaces */
-.barra-superior a:hover {
-    background-color: #27ae60;; /* Cambiar el color de fondo al pasar el mouse */
+.barra-superior a {
+    float: left;
+    display: block;
+    color: #fff; /* Texto blanco */
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 18px; /* Tamaño de fuente */
+    font-family: 'Montserrat', sans-serif; /* Fuente elegida */
 }
 
-@media (min-width: 769px) {
-    .barra-superior {
-        max-width: 9999px; /* Establecer un ancho máximo para la barra de navegación */
-        margin: 0 auto; /* Centrar la barra de navegación */
+@media screen and (max-width: 600px) {
+    .barra-superior a:not(:first-child) {display: none;}
+    .barra-superior a.icon {
+        float: right;
+        display: block;
     }
+}
 
-    .barra-superior a {
-        padding: 10px 12px; /* Reducir el espacio interno del botón */
-        display: inline-block; /* Hacer que los enlaces se muestren en línea en pantallas grandes */
+@media screen and (max-width: 600px) {
+    .barra-superior.responsive {position: relative;}
+    .barra-superior.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .barra-superior.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
     }
 }
 
