--- a/mobile-index/main.css
+++ b/mobile-index/main.css
@@ -175,6 +175,7 @@ input[type="radio"]:checked {
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
     min-height: 850px; /* Ajusta este valor para cambiar la altura mínima del cuadro de texto */
     overflow-x: hidden; /* Evitar desplazamiento horizontal */
+        word-wrap: break-word; /* Añade esta línea */
 
 }
 
